--- a/src/app/layouts/default/default.component.html
+++ b/src/app/layouts/default/default.component.html
@@ -2,7 +2,7 @@
 
 <mat-drawer-container>
     <mat-drawer mode="side" [opened]="sideBarOpen$">
-        <app-sidebar></app-sidebar>
+        <app-sidebar [userData]="currUser$"></app-sidebar>
     </mat-drawer>
 
     <mat-drawer-content>
