--- a/src/app/shared/cmps/sidebar/sidebar.component.html
+++ b/src/app/shared/cmps/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
 <h2 matSubheader>Pages</h2>
 
 <a mat-list-item routerLinkActive="list-item-active" routerLink="/"><mat-icon>widgets</mat-icon>my Dashboard</a>
-<a mat-list-item routerLinkActive="list-item-active" routerLink="/posts">Today's Market Overview</a>
+<a mat-list-item routerLinkActive="list-item-active" routerLink="/posts"><mat-icon>trending_up</mat-icon>Trending</a>
 <a mat-list-item routerLinkActive="list-item-active" routerLink="/articles">Articles</a>
 <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts"><mat-icon>import_contacts</mat-icon>Contacts</a>
 
