--- a/src/app/modules/auth/cmps/login/login.component.html
+++ b/src/app/modules/auth/cmps/login/login.component.html
@@ -12,6 +12,7 @@
     <section class="nav-btns">
         <button mat-button (click)="loginUser()">sign-in</button>
         <button mat-button [routerLink]="['/register']">new user</button>
+        <button mat-button (click)="loginDemo()">demo-user</button>
         <a [routerLink]="['/reset-password']">forgot password?</a>
     </section>
 </div>
