--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
+<section>
 <div>
-    <app-widget-area [chartData]="chartData"></app-widget-area>
+    <app-widget-area *ngIf="chartData$" [chartData]="chartData$"></app-widget-area>
 </div>
 
 <br>
@@ -8,19 +9,18 @@
 
 <h4>This Week</h4>
 <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class="stats-crads">
-    <mat-card *ngFor="let stock of chartData" fxFlex="25">
+    <mat-card *ngFor="let stock of chartData$" fxFlex="25">
         <app-widget-card [chartData]="stock"></app-widget-card>
     </mat-card>
 </div>
-
-
 
 <br>
 
 <mat-divider></mat-divider>
 <br>
 <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px">
-    <div fxFlex="85">
-        <app-widget-pie [chartData]="chartData"></app-widget-pie>
+        <div fxFlex="85">
+            <app-widget-pie *ngIf="chartData$" [chartData]="chartData$"></app-widget-pie>
+        </div>
     </div>
-</div>
+</section>
