--- a/src/app/shared/widgets/pie/pie.component.html
+++ b/src/app/shared/widgets/pie/pie.component.html
@@ -1,3 +1,3 @@
-<highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"
+<highcharts-chart *ngIf="chartData" [Highcharts]="Highcharts" [options]="chartOptions"
 style="height: 100%; display: block;">
 </highcharts-chart>
