--- a/src/app/modules/auth/cmps/login/login.component.scss
+++ b/src/app/modules/auth/cmps/login/login.component.scss
@@ -13,7 +13,8 @@
     input {
       padding-left: 10px;
       border: 1px solid;
-      border-radius: 4px;
+      border-bottom: 2px solid;
+      border-radius: 3px;
       height: 20px;
     }
     mat-icon{
@@ -33,7 +34,7 @@
 
     .mat-button-base {
       margin: 8px 8px 8px 0;
-      padding: 0;
+      padding: 0 3px;
       background-color: rgb(53, 53, 177);
       color: white;
     }
