--- a/src/app/modules/auth/cmps/register/register.component.html
+++ b/src/app/modules/auth/cmps/register/register.component.html
@@ -1,14 +1,14 @@
 <div class="login-container">
     <form class="sign-in">
         <label for="name">User Name:</label>
-        <input type="text" [(ngModel)]="info.username" [ngModelOptions]="{standalone: true}" name="name">
+        <input type="text" [(ngModel)]="info.username" [ngModelOptions]="{standalone: true}" name="name" required>
         <label for="emil">Email:</label>
         <input type="email" [(ngModel)]="info.email" [ngModelOptions]="{standalone: true}" name="emil"
-            [class]="invalidEmail? 'invalid':''" (ngModelChange)="checkValidEmail()">
-            <p>{{invalidEmail}}</p>
+            class={{emailInputClass()}} (ngModelChange)="checkValidEmail()" required>
+        <p>{{invalidEmail}}</p>
         <label for="password">Password:</label>
         <input [type]="isPasswordVisible? 'text':'password'" [(ngModel)]="info.password"
-            [ngModelOptions]="{standalone: true}" name="password">
+            [ngModelOptions]="{standalone: true}" name="password" required>
         <mat-icon *ngIf="isPasswordVisible" (click)="isPasswordVisible=!isPasswordVisible">visibility</mat-icon>
         <mat-icon *ngIf="!isPasswordVisible" (click)="isPasswordVisible=!isPasswordVisible">visibility_off</mat-icon>
 
