--- a/src/app/shared/cmps/header/header.component.scss
+++ b/src/app/shared/cmps/header/header.component.scss
@@ -1,8 +1,21 @@
 mat-toolbar{
-    background-color: rgb(97, 97, 253);
+    background-color: rgb(59, 111, 255);
     color: blanchedalmond;
 }
 
 button{
     background-color: transparent;
+    margin: 0;
 }
+
+.menu{
+    margin-left: 35px;
+}
+
+img{
+    height: 20px;
+    transform: translateY(5%);
+    // position: absolute;
+    margin-left: 30px;
+}
+
