--- a/src/app/shared/cmps/sidebar/sidebar.component.html
+++ b/src/app/shared/cmps/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <mat-nav-list>
     <div class="profile-card">
         <div class="header">
-            <h2>Name Name</h2>
-            <h4>email@email.mail</h4>
+            <span>hello</span>
+            <h2>{{user.login.username}}</h2>
         </div>
-        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <img src={{user.imgUrl}}>
     </div>
 
 <mat-divider></mat-divider>
@@ -12,7 +12,7 @@
 
 <a mat-list-item routerLinkActive="list-item-active" routerLink="/"><mat-icon>widgets</mat-icon>my Dashboard</a>
 <a mat-list-item routerLinkActive="list-item-active" routerLink="/posts"><mat-icon>trending_up</mat-icon>Trending</a>
-<a mat-list-item routerLinkActive="list-item-active" routerLink="/articles">Articles</a>
+<!-- <a mat-list-item routerLinkActive="list-item-active" routerLink="/articles">Articles</a> -->
 <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts"><mat-icon>import_contacts</mat-icon>Contacts</a>
 
 <mat-divider></mat-divider>
