--- a/src/app/shared/cmps/sidebar/sidebar.component.scss
+++ b/src/app/shared/cmps/sidebar/sidebar.component.scss
@@ -10,6 +10,11 @@
         text-align: center;
         padding: 0 20px;
 
+  .header{
+      text-align: left;     
+}
+
+
         img {
             height: 100px;
             width: 100px;
