--- a/src/app/shared/widgets/area/area.component.html
+++ b/src/app/shared/widgets/area/area.component.html
@@ -1,1 +1,3 @@
-<highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions" style="width: 100%; height: 400px; display: block;"></highcharts-chart>
+<div>
+    <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions" style="width: 100%; height: 400px; display: block;"></highcharts-chart>
+</div>
